# nanorand-rs

./: .editorconfig  .gitattributes  .gitignore  .release.toml  .rusty-hook.toml  Cargo.toml  LICENSE.md  README.md  README.tpl  benchmark-run-9-14-2020.txt  benchmark-run-9-15-2020.txt
.cargo/: config.toml
.github/: FUNDING.yml  renovate.json
.github/workflows/: lint.yml  smallcrush.yml  tests.yml
benches/: randbench.rs  speed.rs
nanorand/: Cargo.toml  release.toml
nanorand-abi/: .gitignore  Cargo.toml  build.rs  cbindgen.toml  nanorand.h  test.cpp
nanorand-abi/examples/: smallcrush.c  smallcrush.cpp  test.cpp
nanorand-abi/src/: chacha.rs  lib.rs  pcg64.rs  wyrand.rs
nanorand-abi/src/chacha/: chacha12.rs  chacha20.rs  chacha8.rs  mod.rs
nanorand-bench/: Cargo.toml
nanorand-bench/benches/: speed.rs
nanorand-bench/src/: main.rs
nanorand-fuzz/: Cargo.toml
nanorand-fuzz/fuzz_targets/: chacha20.rs  range.rs
nanorand-py/: .gitignore  Cargo.toml  pyproject.toml
nanorand-py/src/: chacha.rs  lib.rs  pcg64.rs  wyrand.rs
nanorand/benches/: speed.rs
nanorand/src/: gen.rs  lib.rs  tls.rs
nanorand/src/crypto/: chacha.rs
nanorand/src/entropy/: darwin.rs  linux.rs  mod.rs  windows.rs  windows_uwp.rs
nanorand/src/rand/: chacha.rs  mod.rs  pcg64.rs  wyrand.rs
nanorand/tests/: pcg64.rs  time_entropy.rs  wyrand.rs
src/: buffer.rs  crypto.rs  entropy.rs  gen.rs  lib.rs  rand.rs  tls.rs
src/crypto/: chacha.rs  mod.rs
src/entropy/: mod.rs  openbsd.rs  unix.rs  unix_libc.rs  windows.rs  windows_uwp.rs
src/rand/: chacha.rs  mod.rs  pcg64.rs  wyrand.rs
tests/: time_entropy.rs
