[package]
name = "nanorand"
description = "A tiny, fast, zero-dep library for random number generation."
repository = "https://github.com/aspenluxxxy/nanorand-rs"
keywords = ["rand", "random", "no-std", "entropy"]
categories = ["algorithms", "no-std"]
readme = "README.md"
version = "0.3.0"
authors = ["aspen <luxx4x@protonmail.com>"]
edition = "2018"
license = "Zlib"

[features]
default = ["std", "wyrand", "pcg64"]
std = []
wyrand = []
pcg64 = []
chacha = []

[dev-dependencies]
criterion = "0.3"
randomize = "^3.0"
oorandom = "^11.1"
rand_core = "^0.5"
rand_pcg = "^0.2"
random-fast-rng = "^0.1"

[[bench]]
name = "randbench"
harness = false

[profile.bench]
lto = 'thin'
opt-level = 3
codegen-units = 1
