[package]
name = "nanorand"
description = "A tiny, fast, zero-dep library for random number generation."
repository = "https://github.com/Absolucy/nanorand-rs"
keywords = ["rand", "random", "no-std", "entropy"]
categories = ["algorithms", "no-std"]
readme = "README.md"
version = "0.8.0"
rust-version = "1.56"
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2021"
license = "Zlib"

[features]
default = ["entropy", "std", "tls", "wyrand", "pcg64", "chacha"]
entropy = []
alloc = []
std = ["alloc"]
tls = ["entropy", "std", "wyrand"]
wyrand = []
pcg64 = []
chacha = []
rdseed = ["std"]
getrandom_custom = ["getrandom/custom"]

[dependencies]
zeroize = { version = "1.5", optional = true, features = ["zeroize_derive"] }

# optional getrandom with 'js' feature for WASM
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", optional = true, features = ["js"] }

# optional getrandom with 'rdrand' feature for x86(-64)
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
getrandom = { version = "0.2", optional = true, features = ["rdrand"] }

# optional getrandom without any features for non-WASM, non-x86 targets.
[target.'cfg(not(any(target_arch = "wasm32", target_arch = "x86", target_arch = "x86_64")))'.dependencies]
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
hex = "0.4.3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-pc-windows-msvc"]

[workspace]
members = ["nanorand-abi", "nanorand-bench"]
default-members = ["."]

[profile.bench]
lto = "thin"
