[package]
name = "nanorand-abi"
description = "A stable C-compatible ABI for nanorand"
repository = "https://github.com/Absolucy/nanorand-rs"
keywords = ["rng", "wyrand", "pcg", "chacha", "random", "pcg64"]
version = "0.6.1"
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2018"
license = "Zlib"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies.nanorand]
path = "../nanorand"
default-features = false
features = ["std", "wyrand", "pcg64", "chacha", "getrandom"]

[build-dependencies]
cbindgen = "0.19.0"
