[package]
name = "nanorand-abi"
description = "A stable C-compatible ABI for nanorand"
repository = "https://github.com/Absolucy/nanorand-rs"
keywords = ["rng", "wyrand", "pcg", "chacha", "random", "pcg64"]
version = "0.7.0"
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2021"
license = "Zlib"
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
paste = "1.0"

[dependencies.nanorand]
path = ".."
default-features = false
features = ["std", "wyrand", "pcg64", "chacha", "getrandom"]
