[package]
name = "nanorand-bench"
version = "0.0.0"
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2018"
publish = false

[dependencies]
criterion = "0.3.4"
fastrand = "^1.4"
hex = "^0.4"
nanorand = { path = ".." }
oorandom = "^11.1"
rand_chacha = "^0.2"
rand_core = "^0.5"
rand_pcg = "^0.2"
random-fast-rng = "^0.1"
randomize = "^3.0"
wyhash = "^0.4"

[[bench]]
name = "speed"
harness = false
