[package]
name = "nanorand-bench"
version = "0.0.0"
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2021"
publish = false

[dependencies]
criterion = "0.3.5"
fastrand = "1.7.0"
hex = "0.4.3"
nanorand = { path = ".." }
oorandom = "11.1.3"
rand_chacha = "0.3.1"
rand_core = "0.6.3"
rand_pcg = "0.3.1"
random-fast-rng = "0.1.1"
randomize = "3.0.1"
wyhash = "0.5.0"

[[bench]]
name = "speed"
harness = false
