[package]
name = "nanorand-bench"
version = "0.0.0"
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2021"
publish = false

[dependencies]
criterion = "0.3"
fastrand = "1"
hex = "0.4"
nanorand = { path = ".." }
oorandom = "11"
rand_chacha = "0.3"
rand_core = "0.6"
rand_pcg = "0.3"
random-fast-rng = "0.1"
randomize = "3"
wyhash = "0.5"

[[bench]]
name = "speed"
harness = false
