[package]
name = "nanorand-py"
description = "A Python module for nanorand"
version = "0.5.2-alpha.0"
repository = "https://github.com/aspenluxxxy/nanorand-rs"
keywords = ["rng", "wyrand", "pcg", "chacha", "random", "pcg64"]
authors = ["aspen <aspenuwu@protonmail.com>"]
edition = "2018"
license = "Zlib"
publish = false

[lib]
name = "pynanorand"
crate-type = ["cdylib"]

[dependencies.nanorand]
path = "../nanorand"
default-features = false
features = ["std", "wyrand", "pcg64", "chacha", "getrandom"]

[dependencies.pyo3]
version = "0.12"
features = ["extension-module"]

[package.metadata.maturin]
classifier = [
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: zlib/libpng License",
	"Operating System :: Android",
	"Operating System :: MacOS :: MacOS X",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: BSD :: FreeBSD",
	"Operating System :: POSIX :: BSD :: NetBSD",
	"Operating System :: POSIX :: BSD :: OpenBSD",
	"Operating System :: POSIX :: Linux",
	"Operating System :: POSIX :: SunOS/Solaris",
	"Operating System :: iOS",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Python :: Implementation :: PyPy",
	"Programming Language :: Rust",
	"Topic :: Security :: Cryptography",
]
