[package]
name = "nanorand"
description = "A tiny, fast, zero-dep library for random number generation."
repository = "https://github.com/aspenluxxxy/nanorand-rs"
keywords = ["rand", "random", "no-std", "entropy"]
categories = ["algorithms", "no-std"]
readme = "../README.md"
version = "0.5.2-alpha.0"
authors = ["aspen <aspenuwu@protonmail.com>"]
edition = "2018"
license = "Zlib"

[features]
default = ["std", "tls", "wyrand", "pcg64", "chacha"]
std = []
tls = ["std", "wyrand"]
wyrand = []
pcg64 = []
chacha = []
rdseed = ["std"]

[dependencies]
zeroize = { version = "1.2", optional = true, features = ["zeroize_derive"] }
getrandom = { version = "0.2", optional = true, features = ["rdrand", "js"] }

[dev-dependencies]
criterion = "0.3"
randomize = "^3.0"
oorandom = "^11.1"
rand_core = "^0.5"
rand_pcg = "^0.2"
rand_chacha = "^0.2"
random-fast-rng = "^0.1"
fastrand = "^1.4"
wyhash = "^0.4"
hex = "^0.4"

[[bench]]
name = "speed"
harness = false

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-pc-windows-msvc"]
