[package]
name = "nanorand"
description = "A tiny, fast, zero-dep library for random number generation."
repository = "https://github.com/Absolucy/nanorand-rs"
keywords = ["rand", "random", "no-std", "entropy"]
categories = ["algorithms", "no-std"]
readme = "../README.md"
version = "0.6.0"
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2018"
license = "Zlib"

[features]
default = ["std", "tls", "wyrand", "pcg64", "chacha"]
std = []
tls = ["std", "wyrand"]
wyrand = []
pcg64 = []
chacha = []
rdseed = ["std"]

[dependencies]
zeroize = { version = "1.3.0", optional = true, features = ["zeroize_derive"] }
getrandom = { version = "0.2.3", optional = true, features = ["rdrand", "js"] }

[dev-dependencies]
hex = "0.4.3"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-pc-windows-msvc"]
